# AV_Project

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/av_project/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MP3Encoder.cpp  MP3Encoder.h  lamemp3.cpp  native-lib.cpp  opensl_test.cpp  opensl_test.h
app/src/main/cpp/ffmpeg/: ffmpeg-handler.c
app/src/main/cpp/opensles/: opensles_audio.cpp
app/src/main/java/com/example/av_project/: AVProjectApplication.java
app/src/main/java/com/example/av_project/Entity/: LameMp3.java  OpenSLHelper.java
app/src/main/java/com/example/av_project/Utils/: CrashHandler.java  LogUtils.java
app/src/main/java/com/example/av_project/activitys/: AudioRecorderActivity.java  AudioTrackActivity.java  CameraActivity.java  DecodeYUVActivity.java  DirectPlayActivity.java  FFMpegActivity.java  MainActivity.java  MusicBounceActivity.java  OpenSLESActivity.java  PullFFMPEGActivity.java
app/src/main/java/com/example/av_project/entity/: FFmpegHandler.java  LameMp3.java  OpenSLHelper.java
app/src/main/java/com/example/av_project/utils/: CameraPreView.java  ConfigurationUtils.java  CrashHandler.java  LogUtils.java
app/src/main/java/com/example/av_project/utils/camera_relation/: CameraPreView.java
app/src/main/java/com/example/av_project/view/: ClockView.java  MusicView.java
app/src/main/jni/: decode_video.cpp  ffmpeg-handler.c
app/src/main/res/layout/: activity_audio_recorder.xml  activity_audio_track.xml  activity_camera.xml  activity_direct_play.xml  activity_ffmpeg.xml  activity_live_layout.xml  activity_main.xml  activity_main_list_item_layout.xml  activity_music_bounce.xml  activity_open_sles.xml  activity_pull_ffmpeg.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/av_project/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
